tests/baselines/reference/unreachableSwitchTypeofAny.errors.txt
tests/cases/compiler/unreachable.ts(12,5): error TS7027: Unreachable code detected.


==== tests/cases/compiler/unreachable.ts (1 errors) ====
    const unreachable = (x: any): number => {
        switch (typeof x) {
            case 'string': return 0
            case 'number': return 0
            case 'bigint': return 0
            case 'boolean': return 0
            case 'symbol': return 0
            case 'undefined': return 0
            case 'object': return 0
            case 'function': return 0
        }
        x;
        ~~
!!! error TS7027: Unreachable code detected.
    }